--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,7 @@
     -moz-osx-font-smoothing: grayscale;
     font-size: 18px;
     line-height: 24px;
+    scroll-behavior: smooth;
   }
   
   input,
