--- a/css/styles.css
+++ b/css/styles.css
@@ -118,9 +118,10 @@
   border-radius: 0 18px 0 18px;
   font-size: 20px;
   text-transform: uppercase;
+  transition: all ease-in-out 0.2s;
 }  
 .btn:hover {
-   
+   font-weight: 700;
 }
 .title {
   font-family: "Futura bold";
@@ -202,19 +203,23 @@ box-shadow: 0px 15px 20px 10px #161616;
 a.nav-link {
     color: #808285;
 }
-.footer-links {
-  
-}
 .copyright {
   font-size: 12px;
 }
 .footer-links a {
+  padding-right: 3px;
   color: #fff;
   font-family: "SegoeUI";
   font-size: 14px;
+  border-right: 1px solid #fff;
+  transition: color ease-in-out 0.2s;
 }
-
-
+.list-inline-item:not(:last-child) {
+  margin-right: 1px;
+}
+.footer-links a:hover {
+  color: #96175D;
+}
 .slider-item {
   height: 554px;
   background-repeat: no-repeat;
@@ -271,7 +276,6 @@ a.nav-link {
 }
 .events__box {
   padding: 63px 30px 40px;
-
 }
 .events__card-img {
   max-width: 120px;
@@ -295,8 +299,7 @@ a.nav-link {
   text-align: center;
 }
 .news__card-body h5 {
-  font-family: "SegoeUI bold";
-  
+  font-family: "SegoeUI bold";  
   font-size: 23px;
   line-height: 31px;
   color: #96175D;
@@ -312,6 +315,12 @@ a.nav-link {
   border-bottom-left-radius: 18px !important;
   text-transform: uppercase;
   font-size: 20px;
+}
+.news__card {
+  transition: background-color ease-in-out 0.2s;
+}
+.news__card:hover .news__card-footer{
+  background-color: #717612;
 }
 .card {
   border: none;
@@ -439,8 +448,9 @@ a.nav-link {
     .slider_content {
       max-width: 300px;
     }
- /*   .form-group input {
-      max-width: 300px;
-      width: 100% !important;
-    } */
+}
+@media (max-width: 430px) {
+  .footer-links a {
+    font-size: 12px;
+  }
 }
