--- a/css/styles.css
+++ b/css/styles.css
@@ -127,8 +127,7 @@
   font-family: "Futura bold";
   font-size: 44px;
   line-height: 44px;
-}
-  
+}  
   .wrapper {
     min-height: 100%;
     display: -webkit-box;
@@ -142,64 +141,32 @@
     font-family: "Futura-Medium";
     font-weight: 400;   
     color: #808285;
-  }
-  
+  }  
   .wrapper > main {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 auto;
             flex: 1 1 auto;
-  }
-  
+  }  
   .wrapper > * {
     min-width: 0;
   }
-
   .header {
-    align-items: center;
-    left: 0;    
-    right: 0;
-    top: 0;
-    z-index: 5;
     font-size: 18px;
   }
-
-  .header__box {  
-    margin: 0 auto;
-    font-weight: 500;
-  } 
 .login_btn:hover {
     font-weight: 600;
 }
 .header-login-btns {
     max-width: 120px;
-    width: 100%;
-   
+    width: 100%;   
 }
-  .header__content {
-    height: inherit;
-    margin: 0 auto;    
-  }
-  
   .header__logo {
     max-width: 220px;
     width: 100%;    
-  }
-  
+  } 
   .header__logo img {
     width: 100%;
-  }  
-  .header__btn img {
-    width: 100%;
-  }  
-
-  .sticky {
-    background-color: #161616;
-    height: 100px;
-    -webkit-box-shadow: 0px 15px 20px 10px #161616;
--moz-box-shadow: 0px 15px 20px 10px #161616;
-box-shadow: 0px 15px 20px 10px #161616;
-  }
-
+  }    
 a.nav-link {
     color: #808285;
 }
@@ -224,7 +191,6 @@ a.nav-link {
   height: 554px;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
 }
 
 .dots-style {
@@ -274,29 +240,18 @@ a.nav-link {
   font-size: 28px;
   text-transform: uppercase;
 }
-.events__box {
-  padding: 63px 30px 40px;
-}
 .events__card-img {
   max-width: 120px;
   height: auto;
-  margin: 0 auto;
-  margin-bottom: 26px;
-}
-.events__card-img img {
-  width: 100%;
 }
 .events__card h5 {
   max-width: 200px;
-  font-weight: 700;
 }
 .events__text {
   max-width: 890px;
-  margin: 51px auto 0;
   font-family: "SegoeUI";
   font-size: 20px;
   line-height: 27px;
-  text-align: center;
 }
 .news__card-body h5 {
   font-family: "SegoeUI bold";  
@@ -305,15 +260,12 @@ a.nav-link {
   color: #96175D;
 }
 .news__card-body p {
-  margin-top: 29px;
   font-family: "SegoeUI";
   color: #808285;
 }
 .news__card-footer {
-  padding: 15px;
   background-color: #B2BB1C;
   border-bottom-left-radius: 18px !important;
-  text-transform: uppercase;
   font-size: 20px;
 }
 .news__card {
@@ -329,7 +281,6 @@ a.nav-link {
   color: #808285;
 }
 .marketplace__card-body h5{
-  margin-bottom: 18px;
   font-family: "Futura bold";
   font-size: 23px;
   line-height: 23px;
@@ -346,8 +297,6 @@ a.nav-link {
 .regulation__card h5 {
   max-width: 310px;
   min-height: 66px;
-  margin-top: 26px;
-  margin-bottom: 15px;
 }
 .text-title {
   margin: 0 auto;
@@ -361,7 +310,6 @@ a.nav-link {
 }
 .contacts__content {
   max-width: 1000px;
-  margin: 0 auto;
 }
 .contacts__box h3 {
   margin: 25px 0;  
@@ -394,7 +342,6 @@ a.nav-link {
     margin-top: 20px;
   }
   .events__text {
-    margin: 31px auto 0;
     font-size: 16px;
     line-height: 18px;
   }
@@ -448,9 +395,15 @@ a.nav-link {
     .slider_content {
       max-width: 300px;
     }
+    .plus {
+      top: 40% !important;
+    }
 }
 @media (max-width: 430px) {
   .footer-links a {
     font-size: 12px;
   }
+  .plus {
+      top: 35% !important;
+    }
 }
